Removed close button & ensured correct order in extracts

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -235,7 +235,7 @@
                   Un Testo
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal" id="annotations_close_button">Close</button>
                   <button type="button" class="btn btn-primary" id="annotations_modal_button">Save changes</button>
                 </div>
               </div>
