Added timepoint_frequency sort for extractions

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -326,7 +326,7 @@
                     <button type="button"  class="btn btn-outline-secondary btn-sm sequencecolor" id="sequencecolor">Update All</button>
                     <button type="button" class="btn btn-outline-secondary btn-sm removesequencecolor" id="removesequencecolor">Remove All</button>
                 </div>
-                {% comment %} <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm" id="extract_all_trees" onclick="downloadLineagesByColor('{{ entry.uniquesvg }}'); return false;">Extract all trees to file</button></div> {% endcomment %}
+                <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm" id="extract_all_trees" onclick="downloadLineagesByColor('{{ entry.uniquesvg }}'); return false;">Extract all trees to file</button></div>
                 <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm" id="saveall">Save All</button></div>
             </div>
             {% endif %}
