Fixed editors not getting extract all button activated

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -327,13 +327,13 @@
                         <button type="button"  class="btn btn-outline-secondary btn-sm sequencecolor" id="sequencecolor">Update All</button>
                         <button type="button" class="btn btn-outline-secondary btn-sm removesequencecolor" id="removesequencecolor">Remove All</button>
                     </div>
-                    <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm disabled" id="extract_all_trees" onclick="project.showDownloadLineagesModal(); return false;" disabled>Extract All Trees to File</button></div>
+                    <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm disabled" id="extract_all_trees" onclick="project.showDownloadLineagesModal(); return false;" disabled>Extract Lineages for All Trees to File</button></div>
                     <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm" id="saveall">Save All</button></div>
                 </div>
             {% else %}
                 <div class="row">
                     <div class="col-auto mr-auto text-nowrap"></div>
-                    <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm disabled" id="extract_all_trees" onclick="project.showDownloadLineagesModal(); return false;" disabled>Extract All Trees to File</button></div>
+                    <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm disabled" id="extract_all_trees" onclick="project.showDownloadLineagesModal(); return false;" disabled>Extract Lineages for All Trees to File</button></div>
                 </div>
             {% endif %}
             <div id="saveallprog" class="progress hide">
